syntax = "proto3";

package agent;

option go_package = "central-agent-controller/proto";



// capabilities:
//   - scan
//   - update
//   - firewall
//   - application

message AgentConfigRequest {
  string agent_id = 1;
  string hostname = 2;
  string ip_address = 3;
  string os_version = 4;
  string agent_version = 5;
  
//    قائمة القدرات أو الخصائص اللي يدعمها الوكيل 
  repeated string capabilities = 6;
  int64 timestamp = 7;
   string api_key = 8; // << إضافة جديدة للتحقق من الهوية
}


// بنرد بنا علي قدرات الوكيل 
message AgentCommandResponse {
  // string command = 1; // START_SCAN, WAIT, UPDATE_SOFTWARE "FIND_ME"
  repeated string commands = 1; 
  string reason = 2;  
}



// ---------------------------
// رسائل نتائج تنفيذ الأوامر
// ---------------------------
enum Status {
  STATUS_UNSPECIFIED = 0;
  STATUS_SUCCESS = 1;
  STATUS_IN_PROGRESS = 2;
  STATUS_FAILED_AGENT_ERROR = 3;  // فشل بسبب خطأ في الوكيل
  STATUS_FAILED_SERVER_ERROR = 4; // فشل بسبب خطأ في الخادم
  STATUS_REJECTED = 5;            // الأمر مرفوض من قبل الوكيل
}

message AgentCommandResultRequest {
  string agent_id = 1;
  string executed_command = 2;     // الأمر اللي نفذه مثل: "START_SCAN" "FIND_ME"
  Status status = 3;              
  string result = 4;               // محتوى النتيجة أو ملخص
  AgentConfigRequest current_config = 5; // التهيئة الحالية بعد تنفيذ الأمر
  int64 timestamp = 6;
}

message AcknowledgementResponse {
  string message = 1;              // رسالة تأكيد أو توجيه
  string next_command = 2;         // أمر جديد إذا لزم
}

// ---------------------------
// الواجهة الرئيسية للخادم
// ---------------------------

service AgentService {
  rpc SendConfig(AgentConfigRequest) returns (AgentCommandResponse);
  rpc SendResult(AgentCommandResultRequest) returns (AcknowledgementResponse);
}
